welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:18: error: ambiguous reference to overloaded definition,
both method run in class PictureMono2 of type ()Unit
and  method run in class PictureMono2 of type ()Unit
match argument types ()
  run()
  ^PictureMono2:22: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.PictureMono2'
def run() {
    ^